--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "dependencies": [],
   "codeowners": ["@artin961"],
   "requirements": [],
-  "config_flow": false,
+  "config_flow": true,
   "iot_class": "local_polling",
-  "homeassistant": "2022.6.0"
+  "homeassistant": "2022.6.0",
+  "icon": "mdi:lightbulb-multiple"
 }
